--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  background-color: #242424;
+  width: 100%;
+  margin: 2rem 0;
   text-align: center;
 }
 
