--- a/client/src/main.css
+++ b/client/src/main.css
@@ -22,13 +22,13 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-height: 100vh;
   padding-bottom: 6rem;
-}
+} */
 
 h1 {
   font-size: 2.25rem;
@@ -66,7 +66,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
-
+/* 
 figure {
   margin: 0;
   padding: 0;
@@ -81,4 +81,4 @@ video {
   max-width: 1000px;
   width: 95vw;
   padding: 0 0rem;
-}
+} */
