--- a/client/src/styles/_custom.scss
+++ b/client/src/styles/_custom.scss
@@ -1,3 +1,7 @@
+$primary: rgb(33, 0, 54);
+
+@import "../../node_modules/bootstrap/scss/bootstrap";
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -13,6 +17,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  background-color: #242424;
+  width: 100%;
+  text-align: center;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -22,17 +32,15 @@ a:hover {
   color: #535bf2;
 }
 
-/* body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-height: 100vh;
-  padding-bottom: 6rem;
-} */
-
 h1 {
   font-size: 2.25rem;
   line-height: 1.1;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+p {
+  margin: 1rem 0;
 }
 
 button {
@@ -66,19 +74,3 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
-/* 
-figure {
-  margin: 0;
-  padding: 0;
-}
-
-figcaption {
-  max-width: 1000px;
-  width: 95vw;
-}
-
-video {
-  max-width: 1000px;
-  width: 95vw;
-  padding: 0 0rem;
-} */
