--- a/client/src/styles/_custom.scss
+++ b/client/src/styles/_custom.scss
@@ -1,4 +1,5 @@
-$primary: rgb(33, 0, 54);
+$primary: rgb(82, 13, 97);
+$secondary: rgb(255, 0, 221);
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
