--- a/client/src/styles/_custom.scss
+++ b/client/src/styles/_custom.scss
@@ -1,5 +1,5 @@
 $primary: rgb(82, 13, 97);
-$secondary: rgb(255, 0, 221);
+$secondary: rgb(255, 0, 247);
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
@@ -22,6 +22,12 @@ $secondary: rgb(255, 0, 221);
   background-color: #242424;
   width: 100%;
   text-align: center;
+}
+
+#app {
+  background-image: url("/fally-background.png");
+  background-repeat: repeat;
+  background-size: auto;
 }
 
 a {
