--- a/client/src/styles/_custom.scss
+++ b/client/src/styles/_custom.scss
@@ -1,5 +1,5 @@
-$primary: rgb(82, 13, 97);
-$secondary: rgb(255, 0, 247);
+$primary: rgb(0, 0, 0);
+$secondary: rgb(255, 0, 0);
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
@@ -25,7 +25,7 @@ $secondary: rgb(255, 0, 247);
 }
 
 #app {
-  background-image: url("/fally-background.png");
+  background-image: url("/morytania-background.png");
   background-repeat: repeat;
   background-size: auto;
 }
@@ -46,9 +46,22 @@ h1 {
   margin-bottom: 1rem;
 }
 
-p {
-  margin: 1rem 0;
+h1, h2, h3, h4 {
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: 0;
+  padding: 1rem 0;
 }
+
+p {
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 0.5em 1em;
+  border-radius: 0.5em;
+  max-width: fit-content;
+  margin: 0;
+  padding: 1rem 0;
+}
+
 
 button {
   border-radius: 8px;
